--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page</title> </style>
+    <title>Welcome Page</title>
+    <style>
+    body {
+    background-image: url("Pics/Background_main.jpg");
+    }
+    </style>
 </head>
 
 <body>
-  <p> Shalom !</p>
+    <p><h1>Shalom</h1></p>
 </body>
 
 </html>
